--- a/src/css/style.css
+++ b/src/css/style.css
@@ -220,3 +220,19 @@ footer {
   font-size: var(--small-font);
   padding: 1em;
 }
+
+.hide {
+  display: none;
+}
+
+.cart-footer {
+  padding: 1em;
+  margin: 1em 0;
+  border-top: 1px solid var(--light-grey);
+}
+
+.cart-total {
+  font-size: 1.2em;
+  font-weight: bold;
+  margin-bottom: 0.5em;
+}
